[tool.poetry]
name = "apainvoice"
version = "0.1.0"
description = ""
authors = ["Shahvir Buhariwalla <shahvirb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
fastui = "^0.6.0"
requests = "^2.32.3"
sqlmodel = "^0.0.21"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
gunicorn = "^23.0.0"
mypy = "^1.11.1"
uvicorn = "^0.30.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
