[tool.poetry]
name = "apainvoice"
version = "0.1.0"
description = ""
authors = ["Shahvir Buhariwalla <shahvirb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
authlib = "^1.3.2"
fastapi = "^0.112.0"
fastui = "^0.6.0"
python = "^3.11"
python-multipart = "^0.0.9"
requests = "^2.32.3"
sqlmodel = "^0.0.21"
starlette = "^0.38.4"
rich = "^13.8.0"
pyyaml = "^6.0.2"
requests-oauthlib = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
gunicorn = "^23.0.0"
mypy = "^1.11.1"
uvicorn = "^0.30.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-invoices = "apainvoice.controller:update_invoices_entrypoint"